# no_automation_qa

./: .clangd-tidy  .gitignore  Dockerfile  README.md  text.txt
.github/workflows/: main.yml
HW-1/: CMakeLists.txt  a.sh
HW-1/1/: CMakeLists.txt  a.sh  main.cxx  q.sh
HW-1/2/: CMakeLists.txt  a.sh  q.sh
HW-1/2/hello_bin/: CMakeLists.txt
HW-1/2/hello_bin/src/: main.cxx
HW-1/2/hello_lib/: CMakeLists.txt
HW-1/2/hello_lib/include/: hello_lib.hxx
HW-1/hello_bin/: CMakeLists.txt
hw-1/classic/: CMakeLists.txt  a.sh  main.cxx
hw-1/libraries/: a.sh
hw-1/libraries/hello_lib/: CMakeLists.txt
hw-1/libraries/hello_lib/include/: hello_lib.hxx
hw-1/libraries/hello_lib/src/: hello_lib.cxx
hw-1/libraries/src/: main.cxx
hw-2/dynamic_sdl/: CMakeLists.txt  a.sh  main.cxx
hw-2/static_sdl/: CMakeLists.txt  a.sh  main.cxx
hw-3/: readme.md
hw-3/engine-hot-reload/: CMakeLists.txt  a.sh  engine.cxx  engine.hxx  game.cxx
hw-3/engine-shared/: CMakeLists.txt  a.sh  engine.cxx  main.cxx
hw-3/engine-static/: CMakeLists.txt  engine.hxx
hw-3/loop-sdl/: CMakeLists.txt  a.sh  main.cxx
hw-4/canvas/: CMakeLists.txt  a.sh  canvas.cxx  canvas.hxx  main.cxx
hw-4/irender/: irender.cxx  irender.hxx
hw-4/line/: CMakeLists.txt  a.sh  line.cxx  line.hxx  lines.ppm  main.cxx
hw-4/shader/: CmakeLists.txt  a.sh  interpolated.ppm  main.cxx  triangle_interpolated.cxx  triangle_interpolated.hxx
hw-4/triangle/: CmakeLists.txt  a.sh  main.cxx  triangle.cxx  triangle.hxx
hw-4/triangle_interpolated/: CmakeLists.txt  interpolated.ppm  main.cxx  triangle_interpolated.cxx  triangle_interpolated.hxx
hw-5/: CMakeLists.txt  a.sh  engine.cxx  engine.hxx  game.cxx
hw-5/glad/: glad.c  glad.h
hw-6/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx  shader_program.cxx  shader_program.hxx  texture_fragment.shader  texture_vertex.shader  triangle_fragment.shader  triangle_vertex.shader
hw-6/glad/: glad.c
hw-6/glad/include/: glad.h
